--- a/src/task-c/index.css
+++ b/src/task-c/index.css
@@ -4,12 +4,13 @@ body {
 
 .wrapper {
     width: 300px;
-    margin: 40px auto;
+    margin: 30px auto;
 }
 
 h1 {
     text-align: center;
     color: #242424;
+    margin: 15px;
 }
 
 .input {
@@ -21,12 +22,16 @@ h1 {
     border-radius: 5px;
     display: inline-block;
     font-size: 14px;
+    line-height: 30px;
+    background: white;
 }
 
 .button {
     padding: 8px;
     display: inline-block;
     cursor: pointer;
+    border: 1px solid gray;
+    border-radius: 6px;
 }
 
 .invalid-expression.expression {
@@ -35,7 +40,7 @@ h1 {
 }
 
 .expression {
-    margin: 20px;
+    margin: 15px;
     color: #242424;
     font-weight: bold;
     font-size: 16px;
